# microservices

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  package.json  skaffold.yaml
api/: BUILD.bazel  api.go
k8s/api/: deployment.yaml
k8s/ui/: deployment.yaml
ui/: BUILD.bazel  next.config.js
ui/pages/: index.tsx
ui/styles/: globals.css
